# huggingface-hub-cpp

./: CMakeLists.txt  LICENSE  Makefile  README.md
.github/: Doxyfile
.github/workflows/: cmake-build-status.yml  cpp-formatter.yml  doxygen-deployment.yml
cmake/: hfhubConfig.cmake.in
html/: annotated.html  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  graph_legend.html  huggingface__hub_8h.html  huggingface__hub_8h__incl.map  huggingface__hub_8h__incl.md5  huggingface__hub_8h_source.html  index.html  structhuggingface__hub_1_1DownloadResult-members.html  structhuggingface__hub_1_1DownloadResult.html  structhuggingface__hub_1_1FileMetadata-members.html  structhuggingface__hub_1_1FileMetadata.html
html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  pages_0.js  pages_1.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_4.js
include/: downloader.h  hfhub_cpp.h  huggingface_hub.h
latex/: annotated.tex  files.tex  huggingface__hub_8h.tex  huggingface__hub_8h__incl.md5  huggingface__hub_8h_source.tex  index.tex  refman.tex  structhuggingface__hub_1_1DownloadResult.tex  structhuggingface__hub_1_1FileMetadata.tex
src/: downloader.cpp  hfhub_cpp.cpp  huggingface_hub.cpp  main.cpp
